Ajustes de datos de contacto

--- a/index.html
+++ b/index.html
@@ -36,14 +36,7 @@
   "image": "https://trinum.xyz/images/logo_og.jpg",
   "@id": "",
   "url": "https://trinum.xyz",
-  "telephone": "+56920931741",
-  "address": {
-    "@type": "PostalAddress",
-    "streetAddress": "Pangal",
-    "addressLocality": "Hualpen",
-    "postalCode": "4601898",
-    "addressCountry": "CL"
-  },
+  "telephone": "+56974462963",
   "openingHoursSpecification": {
     "@type": "OpeningHoursSpecification",
     "dayOfWeek": [
@@ -88,7 +81,7 @@
         <div class="row">
           <div class="col-md-6">
             <p class="mb-0">
-              <span class="mr-3"><strong>Telefono:</strong> <a href="tel:+56920931741">+56 9 2093 1741</a></span>
+              <span class="mr-3"><strong>Telefono:</strong> <a href="tel:+56974462963">+56 9 7446 2963</a></span>
               <span><strong>Email:</strong> <a href="mailto:jose.duarte@trinum.xyz">jose.duarte@trinum.xyz</a></span>
             </p>
           </div>
@@ -149,7 +142,7 @@
               <div class="col-md-8 text-center">
                 <h1>Necesitas <span class="typed-words"></span></h1>
                 <p class="lead mb-5">Te lo tenemos</p>
-                <div><a href="https://wa.me/+56920931741" class="btn btn-primary btn-md">Pregunta como</a></div>
+                <div><a href="https://wa.me/+5674462963" class="btn btn-primary btn-md">Pregunta como</a></div>
               </div>
             </div>
 
@@ -182,8 +175,8 @@
                 </div>
 
                 <div>
-                  <h3 class="d-flex align-items-center"><span class="icon icon-phone_in_talk mr-2"></span><span>Redes Sociales</span></h3>
-                  <p>Te ayudo a conversar con tus consumidores, una buena comunicación como en cualquier pareja es fundamental.</p>
+                  <h3 class="d-flex align-items-center"><span class="icon icon-phone_in_talk mr-2"></span><span>Seguridad</span></h3>
+                  <p>Herramientas para asegurar tus bienes, alarmas, camaras para tu hogar, inmobilizadores y gps para tus vehiculos.</p>
                 </div>
 
               </div>
@@ -281,7 +274,7 @@
         </div>
       </div>
     </section>
-    <a href="https://wa.me/+56936969242" class="bg-primary py-5 d-block">
+    <a href="https://wa.me/+56974462963" class="bg-primary py-5 d-block">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md10"><h2 class="text-white">Comencemos con un Mensaje!</h2></div>
